@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-12-19 23:14:02+00:00 - build 6617
+
+1. Fix VT response reading in the presence of user input.
+
+--------------------------------------------------------------------------------
 drkns 2025-12-14 20:12:20+00:00 - build 6616
 
 1. Extract more infomation from exceptions in corner cases like gh-1057.
